--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,7 @@ edition = "2021"
 [dependencies]
 bitfield = "0.17.0"
 libc = "0.2.161"
+
+[build-dependencies]
+build-print = "0.1.1"
+bindgen = "0.70.1"
