--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,9 +2,11 @@
 name = "libltc-rs"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+# Exclude the examples, they are licensedd under LGPL 
+exclude = ["/examples"]
 
 [dependencies]
-bitfield = "0.17.0"
 libc = "0.2.161"
 
 [build-dependencies]
